fix(vscodium): remove some broken spacing changes

--- a/configs/programs/vscodium/custom.css
+++ b/configs/programs/vscodium/custom.css
@@ -14,7 +14,8 @@
 }
 
 /* Add gap between panels */
-.part {
+
+/* .part {
   height: 100% !important;
   border-radius: var(--radius) !important;
 }
@@ -25,9 +26,10 @@
 
 .right {
   margin-left: var(--gap) !important;
-}
+} */
 
 /* custom top tabs */
+
 .tabs-and-actions-container {
   background: #181818 !important;
 }
@@ -73,10 +75,11 @@
 }
 
 /* Move Notifications to the left */
-.notifications-toasts {
+
+/* .notifications-toasts {
   right: unset !important;
   left: 3px !important;
-}
+} */
 
 /* Evenly space out sidebar tabs */
 .composite-bar-container,
@@ -148,9 +151,9 @@ Increases the thickness of the indentation guide and adds a tick between each
 line on the guide 
 */
 .monaco-editor .lines-content .core-guide-indent {
-    box-shadow: 1.5px 0 1px 0 var(--indent-color) inset !important;
+    box-shadow: 2px 0 1px 0 var(--indent-color) inset !important;
 }
 
-.monaco-editor .lines-content .core-guide-indent-active {
-    box-shadow: 1.5px 0 1px 0 var(--indent-active-color) inset !important;
+.monaco-editor .view-ruler {
+    box-shadow: 2px 0 0 0 var(--vscode-editorRuler-foreground) inset !important;
 }
